--- a/style.css
+++ b/style.css
@@ -91,8 +91,9 @@ a {
 
 .main-title {
     font-size: 2.5rem;
-    font-weight: 700;
+    font-weight: 500;
     color: white;
+    letter-spacing: 1px;
     text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
     margin-bottom: 0.5rem;
     margin-top:10px;
