--- a/style.css
+++ b/style.css
@@ -110,8 +110,6 @@ a {
 .links-container {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    margin-bottom: 8rem;
 }
 
 /* Blocos de link */
@@ -127,6 +125,8 @@ a {
     overflow: hidden;
     animation: slideInUp 0.6s ease-out;
     animation-fill-mode: both;
+    width: 90%;
+    margin: 1.3rem;
 }
 
 .link-block:nth-child(1) { animation-delay: 0.1s; }
@@ -353,10 +353,10 @@ a {
 
 /* Seção de links de imagem */
 .image-links-section {
-    margin: 3rem 0;
+    margin: 1.3rem;
     animation: fadeInUp 0.8s ease-out 0.6s both;
+    width: 90%;
 }
-
 .section-title {
     font-size: 1.5rem;
     font-weight: 600;
