--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ a {
 
 /* Blocos de link */
 .link-block {
-    background: rgba(0, 182, 70, 0.66);
+    background: rgba(23, 196, 97, 0.6);
     backdrop-filter: blur(20px);
     border: 1px solid rgba(172, 255, 113, 0.2);
     border-radius: 16px;
@@ -141,7 +141,7 @@ a {
     left: -100%;
     width: 100%;
     height: 100%;
-    background: linear-gradient(90deg, transparent, rgb(0, 190, 74), transparent);
+    background: linear-gradient(90deg, transparent, #00ff6d, transparent);
     transition: left 1.5s ease;
 }
 
@@ -329,8 +329,8 @@ a {
 }
 
 /* Efeitos especiais */
-.link-block:hover .link-title {
-    text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+.link-block:hover .link-title{
+    color: #17c461;
 }
 
 /* Gradientes personalizáveis para diferentes tipos de link */
@@ -357,6 +357,7 @@ a {
     animation: fadeInUp 0.8s ease-out 0.6s both;
     width: 90%;
 }
+
 .section-title {
     font-size: 1.5rem;
     font-weight: 600;
