--- a/style.css
+++ b/style.css
@@ -83,6 +83,21 @@ body {
     max-width: 100%;
 }
 
+@media (max-width: 768px) {
+    .profile-name {
+        font-size: 2.0rem;
+        margin-bottom: 20px;/* Tamanho da fonte reduzido para telas menores */
+    }
+}
+
+/* Você pode adicionar mais Media Queries para diferentes tamanhos de tela, se necessário */
+@media (max-width: 350px) {
+    .profile-name {
+        font-size: 1.6rem; /* Tamanho ainda menor para telas muito pequenas */
+        margin-bottom: 20px;
+    }
+}
+
 
 .profile-subtitle {
    grid-column: 2; /* Subtítulo na segunda coluna */
@@ -99,6 +114,19 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+@media (max-width: 768px) {
+    .profile-subtitle {
+        font-size: 12px; /* Tamanho da fonte reduzido para telas menores */
+    }
+}
+
+/* Você pode adicionar mais Media Queries para diferentes tamanhos de tela, se necessário */
+@media (max-width: 350px) {
+    .profile-subtitle {
+        font-size: 10px; /* Tamanho ainda menor para telas muito pequenas */
+    }
 }
 
 @keyframes profilePulse {
