--- a/style.css
+++ b/style.css
@@ -614,6 +614,10 @@ a {
         gap: 0.75rem;
     }
     
+    .link-title {
+    font-size: 1.18rem;
+    }
+    
     .image-link-img {
         height: 150px;
     }
